<resources>
    <string name="app_name">Sancus SO</string>
    <string name="DistributorStock">Distributor Stock</string>
    <string name="MapDistributor">Map Distributor</string>
    <string name="SalesTarget">Sales Target</string>
    <string name="PurchaseOrder">Purchase Order</string>
    <string name="UploadImages">Upload Display Images</string>
    <string name="editStoreAlert"><small>Do you  want to edit store.</small></string>
    <string name="SaveDataBeforeExit">Please ensure that you have saved data before exiting?</string>
    <string name="genTermNoDataConnectionForViewingImgaesOnline">Your device has no Data Connection. \n Please ensure Internet is accessible to see Store images..</string>
    <string name="PleaseSelectCity">Please Select City Name</string>
<string name="PleaseState">Please Select State Name</string>
<string name="PleaseCity">Please Fill Other City Name</string>
    <string name="ViewStrImages">Click to view Store Images</string>
    <string name="NoStateMapped">There is no state mapped to this phone</string>
    <string name="NoCityMapped">There is no city mapped to this phone</string>
    <string name="SelectCity">Select City</string>
    <string name="SelectState">Select State</string>
    <string name="SubmittingTargetDetails">Submitting Target Details...</string>
    <string name="SubmittingTarget">Submitting Details...</string>
    <string name="reject">Reject</string>
    <string name="revisit">Revisit</string>
    <string name="outlet_details">Outlet Details</string>
    <string name="list_of_stores_pending_for_validation">List of Stores Pending for Validation</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="validate_type">Validate Type :</string>
    <string name="select_mode_of_visit">Select mode of visit?</string>
    <string name="store_list">Store List</string>
    <string name="in_store">In Store</string>
    <string name="away_from_store">AWAY FROM STORE</string>
    <string name="verifyLocation">Please verify your location before clicking on next.</string>
    <string name="selectAtleastOneOption">Please Select atleast one option to proceed.</string>
    <string name="txtLocation">Distance greater than 100 meter.</string>
    <string name="selectOtherReasonForLate">To proceed, please specify other reason why you were late.</string>
    <string name="selectReasonForLate">To proceed, please select a reason why you were late.</string>
    <string name="minAmountDue">Minimum amount: </string>
    <string name="txtRSPMsg">Please update your personal details before start any activity</string>
    <string name="SubmitStoreVisitFeedBack">Submit Data</string>
    <string name="SubmitDSRVisitFeedBack"> Save DSM Visit Feedback</string>
    <string name="SubmitDSROverAllFeedBack">Submit DSM OverAll Feedback</string>
    <string name="SameLocRestart">Location is same,Please Restart your phone after clicking Ok button.</string>
    <string name="SubmitStrInfoandStartOrderBooking">Do you want to Submit Store\'s Information? \n\n and Proceed for Order Booking?</string>
    <string name="title_activity_storewisereport">Store Wise Report</string>
    <string name="DayCollectionTotalInv">Total Invoice</string>
    <string name="DayCollectionCashColec">Cash Collection</string>
    <string name="DayCollectionChequeColec">Cheque Collection</string>
    <string name="DayCollectionBalAmt">Balance Amount</string>
    <string name="DayCollectionChequeDet">Cheque Details :</string>
    <string name="DayCollectionChequeNo">Cheque No</string>
    <string name="DayCollectionChequeAmt">Amount</string>
    <string name="DayCollectionChequeDate">Date</string>
    <string name="DayCollectionChequeBank">Bank</string>
    <string name="DayCollectionReportViewDetails">View Details</string>
    <string name="DayCollectionReportUpdateCollection">Update Collection</string>
    <string name="DayStoreCollectionReportInvAmt">Invoice Amount</string>
    <string name="DayStoreCollectionReportChequeAmt">Cheque Amt</string>
    <string name="DayStoreCollectionReportModify">Modify</string>
    <string name="selectDistributorProceeds">Please select Distributor to Proceed.</string>
    <string name="txtAttndnc">DSR Attendance</string>
    <string name="txtScndryUpdate">Enter Day Results</string>
    <string name="selectOptionProceeds">Please select atleast one option to proceed</string>
    <string name="select_report_scope">Summary Reports</string>
    <string name="individual_dsr">Individual DSR</string>
    <string name="full_territory">Full Territory</string>
    <string name="distributor_scope">Distributor Scope</string>
    <string name="select_attendance_scope">View Attendance Report</string>
    <string name="select_attendance_report">DSR Attendance Report</string>
    <string name="StoreSale">Avg. Sale </string>
    <string name="InvoiceReview">Invoice Review</string>
    <string name="selectAtleastOneOptionwithedittext">Please Specify the reason first to proceed.</string>
    <string name="AddOrSelectStoreMsg">Please Add or Select Store To Proceed</string>
    <string name="SameStoreMessage">A different Outlet seems to have the same name pattern. \n\n Click YES to consider this as new Outlet else NO</string>
    <string name="pending_data">Submit Pending Data</string>
    <string name="submit_pending_data">Looks data has been not submitted yet, Please submit data before refreshing complete data</string>
    <string name="txtOk">OK</string>
    <string name="editStoreMessage">Click YES to proceed the mapping of this store.</string>
    <string name="uploading_error">Error while uploading image</string>
    <string name="working">Working</string>
    <string name="not_working">Not Working</string>
    <string name="TodayStock">Stock Today</string>
    <string name="stockAsOn">Stock On </string>
    <string name="DayStartButtonText">Day Start</string>
    <string name="ExitButtonText">Exit</string>
    <string name="today_working">Today Working</string>
    <string name="today_Notworking">Not Working</string>
    <string name="submittingDayStart">Submitting Day Start Details...</string>
    <string name="Coverage_Area">Coverage Area</string>
    <string name="DSR_Profile">DSR Profile</string>
    <string name="Contact_No">Contact No</string>
    <string name="DOB">DOB</string>
    <string name="genStoreListWhoseDataIsNotYetSubmitted">Following invoices are Not Submitted as Yet. Invoices only Saved but not Submitted now will be permanently lost.</string>
    <string name="DayEndDataMsg">Are you sure to End your Day Visit?</string>
    <string name="AlertDialogHeaderMsg">Alert</string>
    <string name="AlertDialogHeaderErrorMsg">Error</string>
    <string name="AlertDialogOkButton">OK</string>
    <string name="AlertDialogCancelButton">Cancel</string>
    <string name="AlertDialogYesButton">Yes</string>
    <string name="AlertDialogNoButton">No</string>
    <string name="genTermInformation">Information</string>
    <string name="genTermNoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
    <string name="BackButConfirm">Have you saved your data before going back?</string>
    <string name="LocalAreaMessage">Local Area</string>
    <string name="PinCodeMessage">Pin Code</string>
    <string name="CityMessage">City</string>
    <string name="StateMessage">State</string>
    <string name="PleaseSelectDistributor">Please Select Distributor.</string>
    <string name="genTermNoDataConnection">Information</string>
    <string name="internetError">Internet connection is slow ,please try again.</string>
    <string name="phnRegisterError">This phone is not registered, please contact administrator.</string>
    <string name="phnDateError">Your Phone Date is not correct.Please Correct it.</string>
    <string name="regID">Create Registration ID.</string>
    <string name="errorTxt">Error :</string>
    <string name="errorPlayServices">This device does not support Play services, App will not work normally</string>
    <string name="NewVersionMsg">New Version of this application is available now. \nPlease click on OK to install new Version!</string>
    <string name="UpdatingNewVersionMsg">Updating New Version…</string>
    <string name="genTermPleaseWaitNew">Please Wait ...</string>
    <string name="genTermLoadData">Loading Data...</string>
    <string name="txtValidatingUser">Validating User</string>
    <string name="OrderTypeActualVisitHeader">Store Check</string>
    <string name="txtWelcome">Welcome</string>
    <string name="radioYes">Yes</string>
    <string name="radioNo">No</string>
    <string name="txtUpdate">Update Now</string>
    <string name="txtNotYou">Not You</string>
    <string name="hintMobileNo">Mobile No.</string>
    <string name="txtValidate">Validate</string>
    <string name="txtFName">First Name</string>
    <string name="txtLName">Last Name</string>
    <string name="txtContactNo">Contact No.</string>
    <string name="txtDOB">DOB</string>
    <string name="txtSelectDate">Select Date</string>
    <string name="txtSex">Sex</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtMaritalStatus">Marital Status</string>
    <string name="txtMarried">Married</string>
    <string name="txtUnmarried">Unmarried</string>
    <string name="txtMarriedDate">Married Date</string>
    <string name="txtQualification">Qualification</string>
    <string name="txtSelect">Select</string>
    <string name="txtUpdatedphoto">Updated photo</string>
    <string name="txtSelfie">Selfie</string>
    <string name="txtBrowse">Browse</string>
    <string name="txtEmailID">EmailID</string>
    <string name="txtBloodGroup">Blood Group</string>
    <string name="txtSIGNHERE">SIGN HERE</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtclearSign">clear Sign</string>
    <string name="txtsave">save</string>
    <string name="txtProceed">Proceed</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtNoCamera">Sorry, your phone does not have a camera!</string>
    <string name="txtNoFrontCamera">No front facing camera found.</string>
    <string name="txtSuccessfullySaved">Successfully Saved</string>
    <string name="txtSELECTDOB">SELECT DOB</string>
    <string name="txtSelectMarriedDate">Select Married Date</string>
    <string name="txtBloodGroupTitle">Blood-Group</string>
    <string name="txtSubmitData">Do you want to submit data</string>
    <string name="txtErrorNoDataConnection">No Data Connection!</string>
    <string name="txtErrorInternetConnection">Your device has no Data Connection! Please ensure Internet is accessible to Continue.</string>
    <string name="AccountCensusBtn">Account Census Report</string>
    <string name="select_track_type">Select Track Type</string>
    <string name="data_report">Data Report</string>
    <string name="on_map">On Map</string>
    <string name="txtReport">Report</string>
    <string name="Next">Next</string>
    <string name="txtDone">Done</string>
    <string name="home">Home</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="InitiateDayEnd">Initiate Day End</string>
    <string name="RefreshData">Refresh Data</string>
    <string name="UploadPendingData">Upload Pending Data</string>
    <string name="ChangeRoute">Change Route</string>
    <string name="TargetVsAchieved">Target Vs Achieved</string>
    <string name="CheckTodayOrder">Check Today Order</string>
    <string name="CheckTodayInvoice">Check Today Invoice</string>
    <string name="txtCancle">Cancel</string>
    <string name="Execution">Execution</string>
    <string name="strRemainingStockStatus">Stock In Van</string>
    <string name="StockRequest">Stock Request</string>
    <string name="CashCollection">Cash Collection</string>
    <string name="txtNet">Total Value</string>
</resources>