<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/rl_header"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_header_color">
        <TextView   android:id="@+id/bardd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_activity_storewisereport"
            android:textStyle="bold"
            android:textColor="#ffffff"

            android:typeface="normal"
            android:layout_centerInParent="true"
            android:gravity="center_vertical"
            android:textSize="16sp" />


        <ImageView
            android:id="@+id/imgVw_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_header"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:background="@drawable/card_background_white"

            android:orientation="horizontal">



            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:visibility="gone"
                android:text="@string/DayStoreCollectionReportInvAmt" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/CashCollection" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/DayStoreCollectionReportChequeAmt"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/txtNet" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:textStyle="bold"
                android:textSize="11sp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:padding="2dp"
                android:visibility="invisible"
                android:text="@string/DayStoreCollectionReportModify" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_storeInfo"
                android:orientation="vertical">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"


            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_updateCollection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DayCollectionReportUpdateCollection"/>
            <Button
                android:id="@+id/btn_Next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Next"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
