<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#213F7D"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:text="@string/StockRequest"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">
    <LinearLayout
        android:id="@+id/ll_reqStockViews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/AlertDialogCancelButton"
            android:visibility="gone"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_Done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/txtDone"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
